add: Trying add nodejs to project

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
             </p>
             <div>
                 <button onclick="iniciar()" class="iniciar">INICIAR</button>
-                <!-- <button onclick="parar()" class="parar">PARAR</button>
-                <button onclick="resetar()" class="resetar">RESETAR</button> -->
             </div>
         </div>
         <div class="passwd">
-            <input type="number" max="9" min="0" placeholder="1" onchange=""/>
-            <input type="number" max="9" min="0" placeholder="2"/>
-            <input type="number" max="9" min="0" placeholder="3"/>
-            <input type="number" max="9" min="0" placeholder="4"/>
+            <input id="number1" type="number" max="9" min="0" placeholder="1" onchange="return false" />
+            <input id="number1" type="number" max="9" min="0" placeholder="2" onchange="return false" />
+            <input id="number1" type="number" max="9" min="0" placeholder="3" onchange="return false" />
+            <input id="number1" type="number" max="9" min="0" placeholder="4" onchange="return false" />
             <button onclick="checkPasswd()" class="btn-check">Check</button>
         </div>
     </div>
